--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8"/>
     <title>{{name}}</title>
+    <meta name="description" content="">
+    <meta name="author" content="semibran (Brandon Semilla)">
+    <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link href="style.css" rel="stylesheet"/>
     <script defer src="script.js"></script>
   </head>
