--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8">
     <title>{{name}}</title>
     <meta name="description" content="{{description}}">
     <meta name="author" content="semibran (Brandon Semilla)">
