--- a/app/src/index.html
+++ b/app/src/index.html
@@ -8,6 +8,6 @@
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link href="style.css" rel="stylesheet"/>
-    <script defer src="script.js"></script>
+    <script defer src="index.js"></script>
   </head>
 </html>
